// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SettingsPage visual regression > matches the settings snapshot in dark theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric xntwwlm"
    data-astryx-theme="neutral"
    data-theme="dark"
  >
    <div
      data-testid="settings-page"
      style="max-width: 900px; margin: 0px auto; padding: 24px;"
    >
      <div
        style="margin-bottom: 24px;"
      >
        <h1
          class="astryx-heading level-1 primary x1tgivj0 xcg7oai xfmsba7 x1v68xuy x1lliihq"
          data-color="primary"
          data-level="1"
        >
          Settings
        </h1>
      </div>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Default sort
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              How albums are ordered in the collection view.
            </span>
          </div>
          <div
            class="astryx-stack horizontal gap-1 x78zum5 x1q0g3np x1lfs0n9 x1ngg2t4 xuk3077"
            data-direction="horizontal"
            data-gap="1"
          >
            <div
              class="astryx-field x78zum5 xdt5ytf xzye2dw"
            >
              <label
                class="astryx-field-label x78zum5 x6s0dn4 xzye2dw x9ynric xcr08ib x1kq96og x1e4wzip xv1l7n4 x1ypdohk"
                for="<reactid>"
              >
                Sort by
              </label>
              <div
                class="x78zum5 xdt5ytf xc8icb0"
              >
                <div
                  class="astryx-selector md x9f619 x1vjfegm x1litavf x1y0btm7 xvy26l8 x6q1khz x1832zxr xvdfih8 x10xzikg x12zzom9 xuedmi6 x12w9bfk xlr8y92 x1gnnqk1 x12y27fx xuihb5h x1a2a7pz x1n2onr6 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xce4md1 xrrkdod x9ynric xcr08ib xdk3u5w x1kq96og x1tgivj0 x1ypdohk x1ueg155"
                  data-size="md"
                  style="anchor-name: --astryx-layer-<reactid>, --astryx-layer-<reactid>;"
                >
                  <button
                    aria-controls="<reactid>"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="x78zum5 x6s0dn4 x1qughib x1txdalj x1iyjqo2 xs83m0k x1r8uery xeuugli x1717udv x1ghz6dp xc342km xng3xce xjbqb8w xjb2p0i x1qlqyl8 x15bjb6t x1heor9g x1ypdohk x1a2a7pz"
                    id="<reactid>"
                    role="combobox"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="x1iyjqo2 xeuugli xb3r6kr xlyipyv xuxw1ft x1yc453h"
                    >
                      Album Artist
                    </span>
                  </button>
                  <span
                    class="x2lah0s x78zum5 x6s0dn4 xl56j7k x1kky2od xlup9mm x11xpdln xuedmi6 xlr8y92 x1g0ag68 xv9yike"
                  >
                    <span
                      aria-hidden="true"
                      class="astryx-icon sm inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g x1kky2od xlup9mm x1j61zf2"
                      data-color="inherit"
                      data-size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="xdj266r xat24cr x1lziwak x14z9mp xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x9ynric xjbqb8w xrzjruh xl1vlw0 x1aquc0h x9uej1z x128ha8g xskzprw"
                  id="<reactid>"
                  popover="auto"
                  style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-end span-self-inline-end; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                >
                  <div
                    class="x1n2onr6 x1prclbq x1hviunn x1i5ehqx"
                  >
                    <div
                      aria-labelledby="<reactid>"
                      class="x9f619 xuyqlj2 x1odjw0f x9epnlk xg01cxk xq2gx43"
                      id="<reactid>"
                      role="listbox"
                    >
                      <div
                        aria-selected="true"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7 x1e4wzip"
                        id="<reactid>-item-0"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                Album Artist
                              </span>
                            </span>
                          </div>
                        </span>
                        <span
                          aria-hidden="true"
                          class="astryx-icon sm accent x3nfvp2 x6s0dn4 xl56j7k x2lah0s xqwr325 x1kky2od xlup9mm x1j61zf2"
                          data-color="accent"
                          data-size="sm"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-check"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 6 9 17l-5-5"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7"
                        id="<reactid>-item-1"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                Composer
                              </span>
                            </span>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-describedby="<reactid>"
              aria-label="Sort ascending"
              class="astryx-button secondary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x17x4s8c x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
              data-size="md"
              data-variant="secondary"
              style="anchor-name: --astryx-layer-<reactid>;"
              type="button"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-arrow-up astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                    data-color="inherit"
                    data-size="md"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5 12 7-7 7 7"
                    />
                    <path
                      d="M12 19V5"
                    />
                  </svg>
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
            <div
              class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
              id="<reactid>"
              popover="manual"
              role="tooltip"
              style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
            >
              <div
                class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
              >
                Sort ascending
              </div>
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Language
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Interface language.
            </span>
          </div>
          <div
            aria-label="Select language"
            role="group"
            style="display: flex; gap: 4px; margin-left: auto;"
          >
            <button
              aria-label="English"
              aria-pressed="true"
              class="astryx-button primary sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
              data-size="sm"
              data-variant="primary"
              type="button"
              value="en"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="xb3r6kr xlyipyv xeuugli"
                >
                  EN
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
            <button
              aria-label="Deutsch"
              aria-pressed="false"
              class="astryx-button ghost sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
              data-astryx-edge-comp=""
              data-size="sm"
              data-variant="ghost"
              type="button"
              value="de"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="xb3r6kr xlyipyv xeuugli"
                >
                  DE
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Theme
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Switch between light and dark appearance.
            </span>
          </div>
          <button
            aria-describedby="<reactid>"
            aria-label="Switch to light theme"
            class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
            data-astryx-edge-comp=""
            data-size="md"
            data-variant="ghost"
            style="anchor-name: --astryx-layer-<reactid>;"
            type="button"
          >
            <span
              class="xjp7ctv"
            >
              <span
                class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-sun astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                  data-color="inherit"
                  data-size="md"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <circle
                    cx="12"
                    cy="12"
                    r="4"
                  />
                  <path
                    d="M12 2v2"
                  />
                  <path
                    d="M12 20v2"
                  />
                  <path
                    d="m4.93 4.93 1.41 1.41"
                  />
                  <path
                    d="m17.66 17.66 1.41 1.41"
                  />
                  <path
                    d="M2 12h2"
                  />
                  <path
                    d="M20 12h2"
                  />
                  <path
                    d="m6.34 17.66-1.41 1.41"
                  />
                  <path
                    d="m19.07 4.93-1.41 1.41"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-live="polite"
              class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
              role="status"
            />
          </button>
          <div
            class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
            id="<reactid>"
            popover="manual"
            role="tooltip"
            style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
          >
            <div
              class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
            >
              Switch to light theme
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          data-testid="directory-layout-settings"
          style="display: flex; flex-direction: column; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Directory layout
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              The folder structure used when albums are relaid out. Configured by the operator and read-only here.
            </span>
          </div>
          <div
            aria-hidden="true"
            class="astryx-skeleton xprdx6m x1r1p5j5 xvpkmg4 xpz12be xqgcaz xa4qsjk xeuoslp x1aquc0h x193epu2 x1hviunn x5lhr3w x16ye13r xvo38ju"
            data-testid="layout-settings-loading"
            style="--x-width: 100%; --x-height: 48px; --x-animationDelay: 1000ms;"
          />
          <div>
            <div
              class="astryx-field x78zum5 xdt5ytf xzye2dw"
            >
              <label
                class="astryx-field-label x78zum5 x6s0dn4 xzye2dw x9ynric xcr08ib x1kq96og x1e4wzip xnbbluu x1h6gzvc"
                for="<reactid>"
              >
                Preview album
              </label>
              <div
                class="x78zum5 xdt5ytf xc8icb0"
              >
                <div
                  class="astryx-selector md x9f619 x1vjfegm x1litavf x1y0btm7 x1832zxr xvdfih8 x10xzikg x12zzom9 xuedmi6 x12w9bfk xlr8y92 x1gnnqk1 x12y27fx xuihb5h x1a2a7pz x1n2onr6 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xce4md1 xrrkdod x9ynric xcr08ib xdk3u5w x1kq96og x1tgivj0 x1ueg155 x1h6gzvc xbyyjgo xvy26l8"
                  data-size="md"
                  style="anchor-name: --astryx-layer-<reactid>, --astryx-layer-<reactid>;"
                >
                  <button
                    aria-controls="<reactid>"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="x78zum5 x6s0dn4 x1qughib x1txdalj x1iyjqo2 xs83m0k x1r8uery xeuugli x1717udv x1ghz6dp xc342km xng3xce xjbqb8w xjb2p0i x1qlqyl8 x15bjb6t x1heor9g x1ypdohk x1a2a7pz"
                    disabled=""
                    id="<reactid>"
                    role="combobox"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="x1iyjqo2 xeuugli xb3r6kr xlyipyv xuxw1ft x1yc453h"
                    >
                      No album selected
                    </span>
                  </button>
                  <span
                    class="x2lah0s x78zum5 x6s0dn4 xl56j7k x1kky2od xlup9mm x11xpdln xuedmi6 xlr8y92 x1g0ag68 xv9yike"
                  >
                    <span
                      aria-hidden="true"
                      class="astryx-icon sm inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g x1kky2od xlup9mm x1j61zf2"
                      data-color="inherit"
                      data-size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="xdj266r xat24cr x1lziwak x14z9mp xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x9ynric xjbqb8w xrzjruh xl1vlw0 x1aquc0h x9uej1z x128ha8g xskzprw"
                  id="<reactid>"
                  popover="auto"
                  style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-end span-self-inline-end; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                >
                  <div
                    class="x1n2onr6 x1prclbq x1hviunn x1i5ehqx"
                  >
                    <div
                      aria-labelledby="<reactid>"
                      class="x9f619 xuyqlj2 x1odjw0f x9epnlk xg01cxk xq2gx43"
                      id="<reactid>"
                      role="listbox"
                    >
                      <div
                        aria-selected="true"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7 x1e4wzip"
                        id="<reactid>-item-0"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                No album selected
                              </span>
                            </span>
                          </div>
                        </span>
                        <span
                          aria-hidden="true"
                          class="astryx-icon sm accent x3nfvp2 x6s0dn4 xl56j7k x2lah0s xqwr325 x1kky2od xlup9mm x1j61zf2"
                          data-color="accent"
                          data-size="sm"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-check"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 6 9 17l-5-5"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="layout-preview-empty"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Select an album to preview where it would be placed.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsPage visual regression > matches the settings snapshot in light theme 1`] = `
<div>
  <div
    class="xjp7ctv x1tgivj0 x9ynric x19aimcq"
    data-astryx-theme="neutral"
    data-theme="light"
  >
    <div
      data-testid="settings-page"
      style="max-width: 900px; margin: 0px auto; padding: 24px;"
    >
      <div
        style="margin-bottom: 24px;"
      >
        <h1
          class="astryx-heading level-1 primary x1tgivj0 xcg7oai xfmsba7 x1v68xuy x1lliihq"
          data-color="primary"
          data-level="1"
        >
          Settings
        </h1>
      </div>
      <div
        style="display: flex; flex-direction: column; gap: 8px;"
      >
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Default sort
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              How albums are ordered in the collection view.
            </span>
          </div>
          <div
            class="astryx-stack horizontal gap-1 x78zum5 x1q0g3np x1lfs0n9 x1ngg2t4 xuk3077"
            data-direction="horizontal"
            data-gap="1"
          >
            <div
              class="astryx-field x78zum5 xdt5ytf xzye2dw"
            >
              <label
                class="astryx-field-label x78zum5 x6s0dn4 xzye2dw x9ynric xcr08ib x1kq96og x1e4wzip xv1l7n4 x1ypdohk"
                for="<reactid>"
              >
                Sort by
              </label>
              <div
                class="x78zum5 xdt5ytf xc8icb0"
              >
                <div
                  class="astryx-selector md x9f619 x1vjfegm x1litavf x1y0btm7 xvy26l8 x6q1khz x1832zxr xvdfih8 x10xzikg x12zzom9 xuedmi6 x12w9bfk xlr8y92 x1gnnqk1 x12y27fx xuihb5h x1a2a7pz x1n2onr6 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xce4md1 xrrkdod x9ynric xcr08ib xdk3u5w x1kq96og x1tgivj0 x1ypdohk x1ueg155"
                  data-size="md"
                  style="anchor-name: --astryx-layer-<reactid>, --astryx-layer-<reactid>;"
                >
                  <button
                    aria-controls="<reactid>"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="x78zum5 x6s0dn4 x1qughib x1txdalj x1iyjqo2 xs83m0k x1r8uery xeuugli x1717udv x1ghz6dp xc342km xng3xce xjbqb8w xjb2p0i x1qlqyl8 x15bjb6t x1heor9g x1ypdohk x1a2a7pz"
                    id="<reactid>"
                    role="combobox"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="x1iyjqo2 xeuugli xb3r6kr xlyipyv xuxw1ft x1yc453h"
                    >
                      Album Artist
                    </span>
                  </button>
                  <span
                    class="x2lah0s x78zum5 x6s0dn4 xl56j7k x1kky2od xlup9mm x11xpdln xuedmi6 xlr8y92 x1g0ag68 xv9yike"
                  >
                    <span
                      aria-hidden="true"
                      class="astryx-icon sm inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g x1kky2od xlup9mm x1j61zf2"
                      data-color="inherit"
                      data-size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="xdj266r xat24cr x1lziwak x14z9mp xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x9ynric xjbqb8w xrzjruh xl1vlw0 x1aquc0h x9uej1z x128ha8g xskzprw"
                  id="<reactid>"
                  popover="auto"
                  style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-end span-self-inline-end; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                >
                  <div
                    class="x1n2onr6 x1prclbq x1hviunn x1i5ehqx"
                  >
                    <div
                      aria-labelledby="<reactid>"
                      class="x9f619 xuyqlj2 x1odjw0f x9epnlk xg01cxk xq2gx43"
                      id="<reactid>"
                      role="listbox"
                    >
                      <div
                        aria-selected="true"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7 x1e4wzip"
                        id="<reactid>-item-0"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                Album Artist
                              </span>
                            </span>
                          </div>
                        </span>
                        <span
                          aria-hidden="true"
                          class="astryx-icon sm accent x3nfvp2 x6s0dn4 xl56j7k x2lah0s xqwr325 x1kky2od xlup9mm x1j61zf2"
                          data-color="accent"
                          data-size="sm"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-check"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 6 9 17l-5-5"
                            />
                          </svg>
                        </span>
                      </div>
                      <div
                        aria-selected="false"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7"
                        id="<reactid>-item-1"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                Composer
                              </span>
                            </span>
                          </div>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <button
              aria-describedby="<reactid>"
              aria-label="Sort ascending"
              class="astryx-button secondary md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 x17x4s8c x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
              data-size="md"
              data-variant="secondary"
              style="anchor-name: --astryx-layer-<reactid>;"
              type="button"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-arrow-up astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                    data-color="inherit"
                    data-size="md"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m5 12 7-7 7 7"
                    />
                    <path
                      d="M12 19V5"
                    />
                  </svg>
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
            <div
              class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
              id="<reactid>"
              popover="manual"
              role="tooltip"
              style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
            >
              <div
                class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
              >
                Sort ascending
              </div>
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Language
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Interface language.
            </span>
          </div>
          <div
            aria-label="Select language"
            role="group"
            style="display: flex; gap: 4px; margin-left: auto;"
          >
            <button
              aria-label="English"
              aria-pressed="true"
              class="astryx-button primary sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem x1ewilqj x17wrial x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
              data-size="sm"
              data-variant="primary"
              type="button"
              value="en"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="xb3r6kr xlyipyv xeuugli"
                >
                  EN
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
            <button
              aria-label="Deutsch"
              aria-pressed="false"
              class="astryx-button ghost sm x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xce4md1 xrrkdod xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x6k0iem xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x3oybdh xk4oym4"
              data-astryx-edge-comp=""
              data-size="sm"
              data-variant="ghost"
              type="button"
              value="de"
            >
              <span
                class="xjp7ctv"
              >
                <span
                  class="xb3r6kr xlyipyv xeuugli"
                >
                  DE
                </span>
              </span>
              <span
                aria-live="polite"
                class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
                role="status"
              />
            </button>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Theme
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Switch between light and dark appearance.
            </span>
          </div>
          <button
            aria-describedby="<reactid>"
            aria-label="Switch to dark theme"
            class="astryx-button ghost md x1n2onr6 x3nfvp2 x6s0dn4 xl56j7k x1txdalj xc342km xng3xce x1jxw6zd xjb2p0i xcr08ib x1kq96og x1e4wzip xuxw1ft x1ypdohk xrafxwg xuedmi6 x12w9bfk xlr8y92 x1ueg155 xjbqb8w x1tgivj0 x1ilzqfv xq8i9tn x17nn4n9 xkzo27j x1wfwxd8 x13aywxo x1v15ycx xioom0i xnjsko4 xt970qd x3oybdh xk4oym4"
            data-astryx-edge-comp=""
            data-size="md"
            data-variant="ghost"
            style="anchor-name: --astryx-layer-<reactid>;"
            type="button"
          >
            <span
              class="xjp7ctv"
            >
              <span
                class="x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1kky2od xlup9mm x1j61zf2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-moon astryx-icon md inherit x2lah0s x1heor9g xw4jnvo x1qx5ct2"
                  data-color="inherit"
                  data-size="md"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"
                  />
                </svg>
              </span>
            </span>
            <span
              aria-live="polite"
              class="x10l6tqk x1i1rx1s xjm9jq1 xkdpibf x1717udv xb3r6kr xzpqnlu xuxw1ft xng3xce x13vifvy x1o0tod x47corl x87ps6o"
              role="status"
            />
          </button>
          <div
            class="astryx-tooltip xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x19aspcf xrkvqaz x1hviunn x9ynric xjm74w1 xw6l6zx xcsaf9d x14cgwvg x1lziwak x14z9mp x3psbcj x1aquc0h x9uej1z x128ha8g xskzprw"
            id="<reactid>"
            popover="manual"
            role="tooltip"
            style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-start; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
          >
            <div
              class="xfsso4q xy143xn x12gdq22 x1djylfy xw5ewwj x13faqbe"
            >
              Switch to dark theme
            </div>
          </div>
        </div>
        <div
          aria-orientation="horizontal"
          class="astryx-divider subtle horizontal x78zum5 x6s0dn4 xh8yej3"
          data-orientation="horizontal"
          data-variant="subtle"
          role="separator"
        >
          <div
            class="xsyqizj x1iyjqo2 xs83m0k x1m4xfpy"
          />
        </div>
        <div
          data-testid="directory-layout-settings"
          style="display: flex; flex-direction: column; gap: 16px; padding: 8px 0px;"
        >
          <div>
            <h2
              class="astryx-heading level-2 primary x1tgivj0 x1xvnhcw x1cpk1wn x12yy4cs x1lliihq"
              data-color="primary"
              data-level="2"
            >
              Directory layout
            </h2>
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              The folder structure used when albums are relaid out. Configured by the operator and read-only here.
            </span>
          </div>
          <div
            aria-hidden="true"
            class="astryx-skeleton xprdx6m x1r1p5j5 xvpkmg4 xpz12be xqgcaz xa4qsjk xeuoslp x1aquc0h x193epu2 x1hviunn x5lhr3w x16ye13r xvo38ju"
            data-testid="layout-settings-loading"
            style="--x-width: 100%; --x-height: 48px; --x-animationDelay: 1000ms;"
          />
          <div>
            <div
              class="astryx-field x78zum5 xdt5ytf xzye2dw"
            >
              <label
                class="astryx-field-label x78zum5 x6s0dn4 xzye2dw x9ynric xcr08ib x1kq96og x1e4wzip xnbbluu x1h6gzvc"
                for="<reactid>"
              >
                Preview album
              </label>
              <div
                class="x78zum5 xdt5ytf xc8icb0"
              >
                <div
                  class="astryx-selector md x9f619 x1vjfegm x1litavf x1y0btm7 x1832zxr xvdfih8 x10xzikg x12zzom9 xuedmi6 x12w9bfk xlr8y92 x1gnnqk1 x12y27fx xuihb5h x1a2a7pz x1n2onr6 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xce4md1 xrrkdod x9ynric xcr08ib xdk3u5w x1kq96og x1tgivj0 x1ueg155 x1h6gzvc xbyyjgo xvy26l8"
                  data-size="md"
                  style="anchor-name: --astryx-layer-<reactid>, --astryx-layer-<reactid>;"
                >
                  <button
                    aria-controls="<reactid>"
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    class="x78zum5 x6s0dn4 x1qughib x1txdalj x1iyjqo2 xs83m0k x1r8uery xeuugli x1717udv x1ghz6dp xc342km xng3xce xjbqb8w xjb2p0i x1qlqyl8 x15bjb6t x1heor9g x1ypdohk x1a2a7pz"
                    disabled=""
                    id="<reactid>"
                    role="combobox"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="x1iyjqo2 xeuugli xb3r6kr xlyipyv xuxw1ft x1yc453h"
                    >
                      No album selected
                    </span>
                  </button>
                  <span
                    class="x2lah0s x78zum5 x6s0dn4 xl56j7k x1kky2od xlup9mm x11xpdln xuedmi6 xlr8y92 x1g0ag68 xv9yike"
                  >
                    <span
                      aria-hidden="true"
                      class="astryx-icon sm inherit x3nfvp2 x6s0dn4 xl56j7k x2lah0s x1heor9g x1kky2od xlup9mm x1j61zf2"
                      data-color="inherit"
                      data-size="sm"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-chevron-down"
                        fill="none"
                        height="1em"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="m6 9 6 6 6-6"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  class="xdj266r xat24cr x1lziwak x14z9mp xexx8yu x18d9i69 x1c1uobl xyri2b xc342km xng3xce x1rea2x4 x9ynric xjbqb8w xrzjruh xl1vlw0 x1aquc0h x9uej1z x128ha8g xskzprw"
                  id="<reactid>"
                  popover="auto"
                  style="position-anchor: --astryx-layer-<reactid>; position-area: self-block-end span-self-inline-end; position-try-fallbacks: flip-block, flip-inline, flip-block flip-inline;"
                >
                  <div
                    class="x1n2onr6 x1prclbq x1hviunn x1i5ehqx"
                  >
                    <div
                      aria-labelledby="<reactid>"
                      class="x9f619 xuyqlj2 x1odjw0f x9epnlk xg01cxk xq2gx43"
                      id="<reactid>"
                      role="listbox"
                    >
                      <div
                        aria-selected="true"
                        class="x9f619 x78zum5 x6s0dn4 x1qughib x1txdalj xh8yej3 xlsj2fj xh6dtrn x9ynric xcr08ib x1tgivj0 xjbqb8w x1ypdohk xdpxx8g x1a2a7pz x1vofgu7 x1e4wzip"
                        id="<reactid>-item-0"
                        role="option"
                      >
                        <span
                          class="x78zum5 x6s0dn4 x1txdalj x98rzlu xeuugli"
                        >
                          <div
                            class="astryx-item balanced center x78zum5 x6s0dn4 x1txdalj x1n2onr6 x9f619 x1yc453h xt970qd xnjsko4 x2u8bby astryx-selector-option"
                            data-align="center"
                            data-density="balanced"
                          >
                            <span
                              class="x78zum5 xdt5ytf x98rzlu xeuugli x1yc453h"
                            >
                              <span
                                class="x1tgivj0 xjm74w1 xw6l6zx xb3r6kr xlyipyv xuxw1ft"
                              >
                                No album selected
                              </span>
                            </span>
                          </div>
                        </span>
                        <span
                          aria-hidden="true"
                          class="astryx-icon sm accent x3nfvp2 x6s0dn4 xl56j7k x2lah0s xqwr325 x1kky2od xlup9mm x1j61zf2"
                          data-color="accent"
                          data-size="sm"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-check"
                            fill="none"
                            height="1em"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M20 6 9 17l-5-5"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            data-testid="layout-preview-empty"
          >
            <span
              class="astryx-text supporting secondary xv1l7n4 x141an7d x1ltkj2j xv8on6e xt0psk2"
              data-color="secondary"
              data-type="supporting"
            >
              Select an album to preview where it would be placed.
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
